# cf-python-example

./: README.md  pyproject.toml  wrangler.toml
.wrangler/cache/: cf.json  wrangler-account.json
.wrangler/tmp/bundle-g59Oiy/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-rXIBDi/: middleware-loader.entry.ts
.wrangler/tmp/dev-GUBEED/: ProxyServerWorker.js  ProxyServerWorker.js.map
.wrangler/tmp/dev-omsypy/: ProxyServerWorker.js  ProxyServerWorker.js.map
python_modules/: asgi.py
python_modules/charset_normalizer-3.4.5.dist-info/: RECORD
python_modules/fastapi-0.135.1.dist-info/: RECORD
python_modules/httpx-0.28.1.dist-info/: RECORD
python_modules/jsonpatch-1.33.dist-info/: RECORD
python_modules/jsonpointer-3.0.0.dist-info/: RECORD
python_modules/langchain_core-0.3.63.dist-info/: RECORD
python_modules/langsmith-0.2.11.dist-info/: RECORD
python_modules/orjson-3.10.1.dist-info/: METADATA  RECORD  WHEEL
python_modules/packaging-24.2.dist-info/: RECORD
python_modules/pydantic_core-2.27.2.dist-info/: RECORD  WHEEL
python_modules/pyyaml-6.0.2.dist-info/: RECORD  WHEEL
python_modules/sqlalchemy-2.0.48.dist-info/: RECORD
python_modules/workers_runtime_sdk-1.1.0.dist-info/: METADATA  RECORD
src/: main.py
